--- a/index.html
+++ b/index.html
@@ -3,11 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <title>tic-tac-toe, bro!</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <h1>tic-tac-toe, bro!</h1>
+  <div id="score">
+    <div id="player">X</div>
+    <div class="indScore" id="xScore"></div>
+    <div id="player">O</div>
+    <div class="indScore" id="oScore"></div>
+  </div>
+  <div id="gameBoard" class="gameBoard">
+    <div class="gameCell" id="0"></div>
+    <div class="gameCell" id="1"></div>
+    <div class="gameCell" id="2"></div>
+    <div class="gameCell" id="3"></div>
+    <div class="gameCell" id="4"></div>
+    <div class="gameCell" id="5"></div>
+    <div class="gameCell" id="6"></div>
+    <div class="gameCell" id="7"></div>
+    <div class="gameCell" id="8"></div>
+  </div>
+  <p id="gameMessage"></p>
+  <button id="reset">reset, yo</button>
 
   <script type="text/javascript" src="js/app.js"></script>
 </body>
