computer mode added

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     <div class="gameCell" id="7"></div>
     <div class="gameCell" id="8"></div>
   </div>
+  <div id="players">
+    <button id="player1">1 player</button>
+    <button id="player2">2 player</button>
+  </div>
   <p id="gameMessage"></p>
   <button id="reset">reset, yo</button>
 
